deployments/arr/bazarr/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr-service
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 6767
      targetPort: bazarr
  selector:
    app: bazarr
    part-of: bazarr
