deployments/arr/bazarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.bazarr.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: bazarr-service
          port: 6767
    - match: Host(`bazarr.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: bazarr-service
          port: 6767
      middlewares:
        - name: media-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
